--- a/materials/ResourceCollectFiles.qrc
+++ b/materials/ResourceCollectFiles.qrc
@@ -1,22 +1,28 @@
 <RCC>
+    <qresource prefix="/">
+        <file alias="PASSWORD_MANAGER">images/password_manager.ico</file>
+        <file alias="PASSWORD_TABLE">images/PASSWORD_TABLE.png</file>
+        <file alias="AES_KEY">images/aes_key.png</file>
+        <file alias="WARNING">images/warning.png</file>
+    </qresource>
     <qresource prefix="/bankcard">
         <file alias="AMEX">images/amex.png</file>
         <file alias="MASTERCARD">images/mastercard.png</file>
         <file alias="UNIONPAY">images/unionpay.png</file>
         <file alias="VISA">images/visa.png</file>
-        <file alias="PASSWORD_MANAGER">images/password_manager.ico</file>
         <file alias="MASTER_CARD_TEMPLATE">images/MASTER_CARD_TEMPLATE.svg</file>
         <file alias="UNION_CARD_TEMPLATE">images/UNION_CARD_TEMPLATE.svg</file>
         <file alias="VISA_CARD_TEMPLATE">images/VISA_CARD_TEMPLATE.svg</file>
     </qresource>
     <qresource prefix="/edit">
-        <file alias="DELETE_ROWS">images/DELETE_ROWS.svg</file>
-        <file alias="INSERT_A_ROW">images/INSERT_A_ROW.svg</file>
+        <file alias="DELETE_ROWS">images/DELETE_ROWS.png</file>
+        <file alias="INSERT_ROW_BEFORE">images/INSERT_ROW_BEFORE.svg</file>
         <file alias="APPEND_ROWS">images/APPEND_ROWS.svg</file>
         <file alias="INSERT_ROWS">images/INSERT_ROWS.svg</file>
         <file alias="SAVE_CHANGES">images/SAVE_CHANGES.svg</file>
         <file alias="CREATE_TABLE">images/CREATE_TABLE.svg</file>
-        <file alias="EXPORT_TO_ENCRYPTED_JSON">images/EXPORT_TO_ENCRYPTED_JSON.svg</file>
-        <file alias="EXPORT_TO_IMAGE">images/EXPORT_TO_IMAGE.svg</file>
+        <file alias="EXPORT">images/EXPORT.svg</file>
+        <file alias="SUCCESS">images/SUCCESS.svg</file>
+        <file alias="FAILURE">images/FAILURE.svg</file>
     </qresource>
 </RCC>
