--- a/materials/ResourceCollectFiles.qrc
+++ b/materials/ResourceCollectFiles.qrc
@@ -4,6 +4,8 @@
         <file alias="PASSWORD_TABLE">images/PASSWORD_TABLE.png</file>
         <file alias="AES_KEY">images/aes_key.png</file>
         <file alias="WARNING">images/warning.png</file>
+        <file alias="FROM_PLAIN_CSV">images/FROM_PLAIN_CSV.svg</file>
+        <file alias="FROM_ENCRYPT_CSV">images/FROM_ENCRYPT_CSV.svg</file>
     </qresource>
     <qresource prefix="/bankcard">
         <file alias="AMEX">images/amex.png</file>
@@ -15,12 +17,13 @@
         <file alias="VISA_CARD_TEMPLATE">images/VISA_CARD_TEMPLATE.svg</file>
     </qresource>
     <qresource prefix="/edit">
-        <file alias="DELETE_ROWS">images/DELETE_ROWS.png</file>
+        <file alias="DELETE_ROWS">images/DELETE_ROWS.svg</file>
         <file alias="INSERT_ROW_BEFORE">images/INSERT_ROW_BEFORE.svg</file>
         <file alias="APPEND_ROWS">images/APPEND_ROWS.svg</file>
         <file alias="INSERT_ROWS">images/INSERT_ROWS.svg</file>
         <file alias="SAVE_CHANGES">images/SAVE_CHANGES.svg</file>
         <file alias="CREATE_TABLE">images/CREATE_TABLE.svg</file>
+        <file alias="SEARCH_BY">images/SEARCH_BY.svg</file>
         <file alias="EXPORT">images/EXPORT.svg</file>
         <file alias="SUCCESS">images/SUCCESS.svg</file>
         <file alias="FAILURE">images/FAILURE.svg</file>
